--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,19 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-      {
-        "type": "java", // 言語を指定
-        "name": "java (Attach)", // デバッグ実行名
-        "request": "attach", // 起動中のプログラムにアタッチ
-        "hostName": "localhost",
-        "port": 5050 // 接続するポートを指定
-      }
-    ]
-  }
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "java",
+      "name": "SpringbootApplication",
+      "request": "launch",
+      "mainClass": "com.spring.springbootapplication.SpringbootApplication",
+      "projectName": "academy-spring-profile-app"
+    },
+    {
+      "type": "java",
+      "name": "java (Attach)",
+      "request": "attach",
+      "hostName": "localhost",
+      "port": 5050
+    }
+  ]
+}
