--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,11 +14,12 @@ services:
       - db
 
   db:
-    image: postgres:13.1
+    image: mysql:8.4.6
     container_name: db
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
-      POSTGRES_DB: "dev"
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: test_table
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: oasis0903
     ports:
-      - "5432:5432"
+      - 3307:3306
