--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,11 +11,14 @@ services:
     volumes:
       - ./:/app
     depends_on:
-      - db
+      - mysql
 
-  db:
+  mysql:
+    platform: linux/amd64
     image: mysql:8.4.6
-    container_name: db
+    volumes:
+      - ./mysql/initdb.d:/docker-entrypoint-initdb.d
+      - ./mysql/data/:/var/lib/mysql/
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: test_table
