--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,6 @@ dependencies {
 	//template
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-	//**security
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
-	//implementation 'org.springframework.security:spring-security-config:5.6.10'
-
 	//layout
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
 
@@ -43,6 +39,9 @@ dependencies {
 
 	//mysql
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	//**devtool
+	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 
 	//lomback
 	compileOnly 'org.projectlombok:lombok'
