--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	//layout
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
 
+	//WebSecurity
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
 	//validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
