--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=springboot-application
 
-spring.datasource.url=jdbc:mysql://profile-app-mysql-db.cl6uw4egqtq5.ap-northeast-1.rds.amazonaws.com:3306/test_table
+spring.datasource.url=jdbc:mysql://mysql:3306/test_table
 spring.datasource.username=admin
 spring.datasource.password=oasis0903
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
