--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,8 @@ spring.datasource.url=jdbc:mysql://mysql:3306/test_table
 spring.datasource.username=admin
 spring.datasource.password=oasis0903
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 mybatis.configuration.map-underscore-to-camel-case=true
+
+spring.cloud.aws.region.static=ap-northeast-1
+app.aws.s3.bucket-name=profile-app-s3-bucket
